# crypto_news_trading

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
apps/: entity_service.py  execution_service.py  ingest_service.py  llm_signal_service.py  monitoring_alert_service.py  persistence_service.py  portfolio_service.py  position_pnl_service.py  position_sync_service.py  replay_tools.py  risk_service.py  signal_fusion_service.py  universe_service.py
infra/: docker-compose.yml
infra/postgres/: init.sql
infra/redis/: redis.conf
libs/common-types/src/common_types/: __init__.py  bus.py  config.py  logging.py  models.py  schema.py  (+2 more)
scripts/: demo_pipeline.py  minimal_qwen.sh
services/entity-service/: main.py
services/execution-service/: main.py
services/ingest-service/: main.py
services/llm-signal-service/: main.py
services/monitoring-alert-service/: main.py
services/orchestrator-api/: app.py
services/persistence-service/: main.py
services/portfolio-service/: main.py
services/position-pnl-service/: main.py
services/position-sync-service/: main.py
services/risk-service/: main.py
services/signal-fusion-service/: main.py
services/universe-service/: main.py
tests/: conftest.py
tests/e2e/: test_conflict_signal_handling.py
tests/integration/: test_news_to_execution_pipeline.py
tests/unit/: test_binance_adapter.py  test_execution_service.py  test_monitoring_alert_service.py  test_persistence_service.py  test_position_sync_service.py  test_replay_tools.py  test_risk_service.py  test_signal_fusion.py  test_state_store_snapshot.py
(+8 files in other folders)
