[project]
name = "crypto-news-trading"
version = "0.1.0"
description = "Event-driven crypto quant trading system for Binance Global (paper trading first)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "redis>=5.0.0",
  "fastapi>=0.110.0",
  "uvicorn>=0.30.0",
  "httpx>=0.27.0",
  "feedparser>=6.0.11",
  "openai>=1.40.0",
  "python-dotenv>=1.0.1",
  "tenacity>=8.4.2",
  "asyncpg>=0.29.0",
  "websockets>=12.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.8",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
